--- a/time-tracking-dashboard-project/styles/Home.module.css
+++ b/time-tracking-dashboard-project/styles/Home.module.css
@@ -12,50 +12,6 @@
   align-items: center;
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
 .grid {
   display: flex;
   align-items: center;
@@ -75,13 +31,13 @@
 
 .card {
   margin: 0.5rem;
-  margin-top: -150px;
+  margin-top: -260px;
   padding: 1.5rem;
   text-align: left;
   color: inherit;
   text-decoration: none;
   border-radius: 10px;
-  max-width: 250px;
+  width: 250px;
   background-color: var(--dark-blue-ii);
 }
 
@@ -110,7 +66,7 @@
 }
 
 .profile {
-  border-top: 300px solid var(--desaturated-blue);
+  border-top: 260px solid var(--violet);
 }
 
 .cardProfile {
@@ -120,15 +76,10 @@
   color: inherit;
   text-decoration: none;
   border-radius: 10px;
-  max-width: 250px;
-  height: 450px;
+  width: 250px;
+  height: 520px;
   background-color: var(--dark-blue-ii);
 
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
 }
 
 @media (max-width: 900px) {
@@ -138,8 +89,16 @@
 
   .cardProfile {
     max-width: 250px;
-    height: 252px;
+    height: 100px;
     margin: 0.5rem;
+  }
+
+  .profile {
+    border-top: 100px solid var(--violet);
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
+
   }
 
   .grid {
@@ -152,4 +111,5 @@
     margin: 0.5rem;
     flex-direction: column;
   }
+
 }
