--- a/time-tracking-dashboard-project/styles/globals.css
+++ b/time-tracking-dashboard-project/styles/globals.css
@@ -18,6 +18,12 @@ a {
   box-sizing: border-box;
 }
 
+ul,
+li {
+  list-style: none;
+  padding: 5px;
+}
+
 :root {
   /* primary */
   --blue: hsl(246, 80%, 60%);
@@ -33,4 +39,17 @@ a {
   --dark-blue-ii: hsl(235, 46%, 20%);
   --desaturated-blue: hsl(235, 45%, 61%);
   --pale-blue: hsl(236, 100%, 87%);
+}
+
+@media (max-width: 900px) {
+
+  ul,
+  li {
+    list-style: none;
+    float: left;
+    margin: -11px;
+    padding-left: 25px;
+    align-items: center;
+
+  }
 }
