--- a/time-tracking-dashboard-project/styles/Home.module.css
+++ b/time-tracking-dashboard-project/styles/Home.module.css
@@ -21,7 +21,7 @@
 }
 
 .secondGrid {
-  margin: -5px 10px 10px 250px;
+  margin: 2px 10px 10px 245px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -30,14 +30,14 @@
 }
 
 .card {
-  margin: 0.5rem;
-  margin-top: -225px;
-  padding: 1.5rem;
+  margin: -225px 5px 20px 20px;
+  padding: 1.7rem;
   text-align: left;
   color: inherit;
   text-decoration: none;
   border-radius: 10px;
   width: 250px;
+  height: 220px;
   background-color: var(--dark-blue-ii);
 }
 
@@ -66,7 +66,7 @@
 }
 
 .profile {
-  border-top: 260px solid var(--violet);
+  border-top: 320px solid var(--blue);
 }
 
 .cardProfile {
@@ -85,33 +85,44 @@
 .picture {
   margin-top: -300px;
   margin-right: -110px;
-  text-align: "left";
+  text-align: left;
 }
+
+.reportUser {
+  width: 200px;
+  margin-right: -230px;
+  margin-top: -60px;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+
+
+}
+
 
 @media screen and (max-width: 900px) {
   .card {
     margin: 0.5rem;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
   }
 
   .cardProfile {
     display: flex;
+    flex-direction: column;
     max-width: 250px;
-    height: 100px;
-    margin: 0.5rem;
+    height: 140px;
   }
 
   .profile {
-    border-top: 100px solid var(--violet);
+    border-top: 100px solid var(--blue);
     display: flex;
     flex-direction: row;
     margin: 10px;
 
   }
 
-  .picture {
-    margin-top: 50px;
-  }
-
   .grid {
     width: 100%;
     flex-direction: column;
@@ -123,27 +134,33 @@
     flex-direction: column;
   }
 
-}
+  .reportUser {
+    width: 200px;
+    margin-right: -210px;
+    margin-top: -60px;
+    display: flex;
+    flex-direction: row-reverse;
+    padding: 20px;
+  }
 
+}
 
 @media screen and (max-width: 1200px) {
   .card {
     margin: 0.5rem;
+    font-size: small;
   }
 
   .cardProfile {
     max-width: 250px;
     margin: 0.5rem;
+    font-size: small;
   }
 
   .profile {
     display: flex;
     flex-direction: row;
-    margin: 10px 10px 10px 30px;
-  }
-
-  .picture {
-    margin-top: -50px;
+    margin: 10px 10px 10px 510px;
   }
 
   .grid {
@@ -156,5 +173,14 @@
     margin: 0.5rem;
     flex-direction: row;
   }
+
+  .reportUser {
+    width: 200px;
+    margin-right: -700px;
+    margin-top: -10px;
+    display: flex;
+    flex-direction: row;
+  }
+
 
 }
